# whisper.cpp

./: .gitignore  Makefile
examples/main/: main.cpp
examples/stream/: CMakeLists.txt  VadIterator.cpp  VadIterator.h  stream.cpp
examples/stream/onnxruntime-osx-arm64-1.16.3/lib/: libonnxruntime.dylib
examples/stream/onnxruntime-osx-arm64-1.16.3/lib/libonnxruntime.1.16.3.dylib.dSYM/Contents/: Info.plist
